--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Soora</title>
   </head>
-  <body class="font-open">
+  <body class="font-open bg-gray-100">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
